--- a/BankKata.Tests/BankKata.Tests.csproj
+++ b/BankKata.Tests/BankKata.Tests.csproj
@@ -54,7 +54,9 @@
   <ItemGroup>
     <Compile Include="AccountShould.cs" />
     <Compile Include="BankShould.cs" />
+    <Compile Include="DateProviderShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransationRepoShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
